Release v3.1.0