@@ -1,46 +1,42 @@
 package me.adixe.votereward.commands;
 
-import me.adixe.commonutilslib.commands.CommandException;
-import me.adixe.commonutilslib.commands.args.PlayerArg;
-import me.adixe.commonutilslib.commands.executors.CommandExecutor;
+import me.adixe.commonutilslib.command.CommandException;
+import me.adixe.commonutilslib.command.CommandExecutor;
+import me.adixe.commonutilslib.command.arg.PlayerArg;
 import me.adixe.commonutilslib.configuration.SectionContainer;
-import me.adixe.commonutilslib.placeholders.PlaceholdersManager;
-import me.adixe.commonutilslib.placeholders.providers.PlaceholdersProvider;
+import me.adixe.commonutilslib.placeholder.PlaceholderManager;
 import me.adixe.votereward.VoteReward;
 import me.adixe.votereward.votemanager.Server;
 import me.adixe.votereward.votemanager.VerificationListener;
-import me.adixe.votereward.votemanager.VoteVerifier;
 import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
 import org.simpleyaml.configuration.file.YamlFile;
 
-import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.logging.Level;
 
 public class CheckCommand extends CommandExecutor {
-    public CheckCommand(String permission, SectionContainer settingsContainer) {
-        super("check",
-                Collections.singletonList(new PlayerArg("player")),
-                0, permission, settingsContainer);
+    public CheckCommand(String name, String permission,
+                        SectionContainer settingsContainer) {
+        super(name, permission, settingsContainer,
+                List.of(new PlayerArg("player")), 0);
     }
 
     @Override
-    protected void perform(CommandSender sender, Map<String, Object> argsValues) throws CommandException {
+    protected void execute(CommandSender sender, Map<String, Object> argsValues) throws CommandException {
         VoteReward plugin = VoteReward.getInstance();
 
         YamlFile settings = plugin.getConfiguration().get("settings");
 
-        PlaceholdersManager placeholdersManager = plugin.getPlaceholdersManager();
-
-        PlaceholdersProvider<Server> serverProvider = placeholdersManager.get(Server.class);
+        PlaceholderManager placeholderManager = plugin.getPlaceholderManager();
 
         if (argsValues.containsKey("player")) {
             Player player = (Player) argsValues.get("player");
 
             Map<String, String> placeholders = new HashMap<>(
-                    placeholdersManager.get(Player.class).getUnique(player));
+                    placeholderManager.get(Player.class).getUnique(player));
 
             sendMessage(sender, "process-started.other", placeholders);
 
@@ -48,11 +44,9 @@ public class CheckCommand extends CommandExecutor {
                 Server server = new Server(serverKey);
 
                 Map<String, String> serverPlaceholders = new HashMap<>(placeholders);
-                serverPlaceholders.putAll(serverProvider.getUnique(server));
+                serverPlaceholders.putAll(placeholderManager.get(Server.class).getUnique(server));
 
-                VoteVerifier verifier = new VoteVerifier(server, player.getName());
-
-                verifier.verify(new VerificationListener() {
+                plugin.getVoteManager().verify(server, player, new VerificationListener() {
                     @Override
                     public void success() {
                         sendMessage(sender, "success.other", serverPlaceholders);
@@ -83,11 +77,9 @@ public class CheckCommand extends CommandExecutor {
                 Server server = new Server(serverKey);
 
                 Map<String, String> serverPlaceholders = new HashMap<>(
-                        serverProvider.getUnique(server));
+                        placeholderManager.get(Server.class).getUnique(server));
 
-                VoteVerifier verifier = new VoteVerifier(server, sender.getName());
-
-                verifier.verify(new VerificationListener() {
+                plugin.getVoteManager().verify(server, (Player) sender, new VerificationListener() {
                     @Override
                     public void success() {
                         sendMessage(sender, "success.self", serverPlaceholders);
